--- a/app.json
+++ b/app.json
@@ -10,6 +10,12 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    
+  
+    "android": {
+      "package": "com.gmail.jbobst9.todolist",
+      "versionCode": 2.0
+    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
