--- a/app.json
+++ b/app.json
@@ -14,7 +14,11 @@
   
     "android": {
       "package": "com.gmail.jbobst9.todolist",
-      "versionCode": 2.0
+      "versionCode": 3.0,
+      "config": {
+    
+        "googleMobileAdsAppId": "ca-app-pub-6268407821278608~8279899448" 
+      }
     },
     "updates": {
       "fallbackToCacheTimeout": 0
